# cxplat

./: CMakeLists.txt  README.md  cxplat.kernel.sln
.azure/: azure-pipelines.ci.yml
.azure/templates/: build-config-user.yml  build-config-winkernel.yml  merge-publish-coverage.yml
scripts/: build.ps1  generate_kernel_clog.bat  install-build-artifacts.ps1  log.ps1  merge-coverage.ps1  prepare-package.ps1  run-executable.ps1  run-gtest.ps1  test.ps1  update-sidecar.ps1
src/inc/: CMakeLists.txt  cxplat.h  cxplat.hpp  cxplat.ver  cxplat_fuzz.h  cxplat_linux.h  cxplat_winkernel.h  cxplat_winuser.h  cxplathelper.h  cxplatp.h  msquic.h  msquic.hpp  msquic_fuzz.h  msquic_linux.h  msquic_winkernel.h  msquic_winuser.h  msquichelper.h  msquicp.h  quic_cert.h  quic_crypt.h  quic_datapath.h  quic_driver_helpers.h  quic_hashtable.h  quic_platform.h  quic_platform_dispatch.h  quic_platform_linux.h  quic_platform_winkernel.h  quic_platform_winuser.h  quic_storage.h  quic_tls.h  quic_toeplitz.h  quic_trace.h  quic_trace_manifested_etw.h  quic_var_int.h  quic_versions.h
src/manifest/: CxPlat.wprp  CxPlatEtw.man  MsQuicEtw.man  clog.sidecar  create_kernel_clog_dependencies.bat  cxplat.clog.cs  cxplat.clog_config  manifest.kernel.vcxproj
src/platform/: CMakeLists.txt  cert_capi.c  cert_openssl.c  cert_stub.c  datapath_linux.c  datapath_winkernel.c  datapath_winuser.c  hashtable.c  inline.c  platform.kernel.vcxproj  platform_internal.h  platform_linux.c  platform_winkernel.c  platform_winuser.c  selfsign_capi.c  selfsign_openssl.c  selfsign_stub.c  storage_linux.c  storage_winkernel.c  storage_winuser.c  tls_mitls.c  tls_openssl.c  tls_schannel.c  tls_stub.c  toeplitz.c
src/platform/unittest/: CMakeLists.txt  CryptTest.cpp  DataPathTest.cpp  StorageTest.cpp  TlsTest.cpp  main.cpp  main.h
